# Artisan

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  build.ninja  cmake_install.cmake  flake.nix  makefile
.cmake/api/v1/reply/: cache-v2-879e66f2b773d0dfc362.json  cmakeFiles-v1-c20c5142ebf57bea8399.json  codemodel-v2-f3b7d803b2af75099d02.json  index-2025-07-01T04-18-36-0849.json  target-Artisan-Release-c276fa7a3281838b182e.json  toolchains-v1-8c32560e49d5652cfb47.json
Artisan/: Artisan.cpp  Artisan.h  CMakeLists.txt
isenseconfig/: 1538012955-iconfig.json
src/: Artisan.cpp  BitBoard.h  Board.cpp  Board.h  CMakeLists.txt  Engine.cpp  Engine.h  Memory.h  Misc.h  Move.h  Parser.h  Tables.h  Tuner.cpp  Tuner.h  UCI.cpp  UCI.h  cmake_install.cmake
src/include/: chess.hpp
